--- a/app/src/main/res/layout/fragment_restaurant_details.xml
+++ b/app/src/main/res/layout/fragment_restaurant_details.xml
@@ -15,5 +15,6 @@
 
 
     <include layout="@layout/bottomsheet_layout"/>
+<!--    <include layout="@layout/review_bottomsheet"/>-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
