--- a/app/src/main/res/layout/bottomsheet_layout.xml
+++ b/app/src/main/res/layout/bottomsheet_layout.xml
@@ -37,6 +37,7 @@
         android:text="North Indian"></TextView>
 
     <RelativeLayout
+        android:id="@+id/rl_distance"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -90,9 +91,10 @@
             android:id="@+id/vegonly"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColorHighlight="@color/orange"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:textColorHighlight="@color/orange"
+            android:theme="@style/mySwitch" />
     </RelativeLayout>
 
     <com.google.android.material.tabs.TabLayout
