--- a/app/src/main/res/layout/card_row2.xml
+++ b/app/src/main/res/layout/card_row2.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="150dp"
             android:layout_height="200dp"
@@ -45,6 +46,19 @@
 
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/favorite1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
+            android:padding="2dp"
+            android:background="@drawable/whitecircle"
+            android:src="@drawable/ic_favorite">
+
+        </ImageView>
 
 
 
