--- a/app/src/main/res/layout/card_row4.xml
+++ b/app/src/main/res/layout/card_row4.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <ImageView
             android:id="@+id/image2"
             android:layout_width="match_parent"
@@ -86,6 +87,19 @@
         </RelativeLayout>
 
 
+        <ImageView
+            android:id="@+id/favorite"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:padding="4dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/whitecircle"
+            android:src="@drawable/ic_favorite">
+
+        </ImageView>
 
 
     </RelativeLayout>
