--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <!-- change switch color -->
+
+    </style>
+
+    <style name="mySwitch">
+        <item name="android:colorControlActivated">#F46833</item>
     </style>
 </resources>
