--- a/app/src/main/res/drawable/btn_bg3.xml
+++ b/app/src/main/res/drawable/btn_bg3.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/orange">
+    <solid android:color="#D8699E">
     </solid>
     <corners android:radius="7dp">
     </corners>
