--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tool"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#F46833">
+        android:background="#D8699E">
 
         <TextView
             android:layout_width="wrap_content"
