--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,8 +10,8 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tb_tool"
         android:layout_width="match_parent"
-        android:background="#F46833"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="?attr/actionBarSize"
+        android:background="#D8699E">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -23,18 +23,40 @@
                 android:layout_height="wrap_content"
                 android:text="Location"
                 android:textColor="@color/white"
-                android:textSize="20dp">
+                android:textSize="20dp"></TextView>
 
-            </TextView>
+            <Spinner
+                android:id="@+id/select_location"
+                android:layout_width="120dp"
+                android:layout_height="20dp"
+                style="@style/spinner_style"
+                android:layout_below="@+id/location"
+                android:scrollbarStyle="outsideOverlay"></Spinner>
 
-            <ImageView
+            <TextView
                 android:id="@+id/logo"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="70dp"
-                android:src="@drawable/logo"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="90dp"
                 android:layout_toRightOf="@+id/location"
-                ></ImageView>
+                android:fontFamily="@font/ceviche_one"
+                android:text="Foodie "
+                android:textColor="@android:color/white"
+                android:textSize="25dp"
+                android:textStyle="bold"></TextView>
+
+            <TextView
+                android:layout_marginTop="0dp"
+                android:layout_below="@id/logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_toRightOf="@+id/select_location"
+                android:fontFamily="@font/ceviche_one"
+                android:text="Land"
+                android:textColor="@android:color/white"
+                android:textSize="25dp"
+                android:textStyle="bold"></TextView>
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
