--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -39,8 +39,8 @@
         android:padding="5dp"
         android:maxLength="10"
         android:inputType="number"
-        android:layout_margin="20dp"
-        android:background="@drawable/btn_bg1"
+        android:layout_margin="10dp"
+        android:background="@drawable/menu_btn"
         android:textColor="@android:color/darker_gray"
         android:textSize="20dp">
     </EditText>
@@ -48,12 +48,11 @@
         android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="35dp"
         android:hint="User Name"
         android:padding="5dp"
         android:maxLength="10"
-        android:layout_margin="20dp"
-        android:background="@drawable/btn_bg1"
+        android:layout_margin="10dp"
+        android:background="@drawable/menu_btn"
         android:textColor="@android:color/darker_gray"
         android:textSize="20dp">
     </EditText>
@@ -71,24 +70,11 @@
         android:textColor="@android:color/white"
         android:textSize="20dp">
     </Button>
-    <Button
-        android:id="@+id/testmode"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/btn_bg3"
-        android:gravity="center"
-        android:text="testmode"
-        android:textColor="@android:color/white"
-        android:textSize="20dp">
-    </Button>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="35dp"
         android:gravity="center"
         android:text="OR "
         android:textStyle="bold"
@@ -110,38 +96,38 @@
             android:id="@+id/google_login"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:layout_weight="1"
             android:background="@drawable/btn_bg1"
             android:drawableLeft="@drawable/google1"
-            android:padding="10dp"
-            android:text="Log in with"
-            android:textAllCaps="false"
-            android:textColor="@android:color/black"
             android:textSize="20dp"></com.google.android.gms.common.SignInButton>
-
         <com.facebook.login.widget.LoginButton
             android:id="@+id/fb_login"
             android:layout_width="0dp"
             android:layout_height="90dp"
             android:layout_weight="1"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
             android:drawableLeft="@drawable/fb"
-            android:text="Log in with"
-            android:textAllCaps="false"
-            android:textColor="@android:color/black"
-            android:textSize="20dp"></com.facebook.login.widget.LoginButton>
-
+            android:textSize="25dp"></com.facebook.login.widget.LoginButton>
 
     </LinearLayout>
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="center"
-        android:src="@drawable/cityy">
+        android:src="@drawable/foodie_r"/>
 
-    </ImageView>
+    <TextView
+        android:id="@+id/app_logo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/ceviche_one"
+        android:gravity="center"
+        android:text="@string/foodie_land"
+        android:textSize="40dp" />
 
 
 </LinearLayout>
