--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -40,9 +40,9 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:layout_width="300dp"
+                    android:layout_width="400dp"
                     android:layout_height="300dp"
-                    android:src="@drawable/d3"/>
+                    android:src="@drawable/delivery_by_scooter"/>
 
             </LinearLayout>
 
@@ -58,15 +58,15 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:text="Delivery on the way"
-                    android:gravity="center"
-                    android:textSize="25dp"
-                    android:textStyle="bold"
-                    android:padding="1dp"
-                    android:textColor="@android:color/black"
-                    android:fontFamily="sans-serif-black"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-black"
+                    android:gravity="center"
+                    android:padding="1dp"
+                    android:text="Delivery on the way"
+                    android:textColor="@android:color/black"
+                    android:textSize="25dp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -105,6 +105,7 @@
                     android:layout_marginRight="90dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/btn_bg3"
+                    android:textSize="20dp"
                     android:text="Next"
                     android:textStyle="bold"
                     android:textColor="@android:color/white"
