--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -12,12 +12,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
     <ImageView
+        android:scaleType="fitXY"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:src="@drawable/d_arrive">
+        android:src="@drawable/deliveryarrrr">
     </ImageView>
 
     <TextView
@@ -46,10 +46,11 @@
         android:id="@+id/next2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Get Started   "
+        android:text="Get Started"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:textAllCaps="false"
+        android:textSize="20dp"
         android:layout_marginTop="50dp"
         android:layout_marginLeft="120dp"
         android:layout_marginRight="120dp"
