--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -16,9 +16,7 @@
         android:text="Welcome to Foodie Land"
         android:textColor="@android:color/black"
         android:textSize="30dp"
-        android:textStyle="bold">
-
-    </TextView>
+        android:textStyle="bold"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -37,8 +35,7 @@
         android:gravity="center"
         android:text="Enter mobile number "
         android:textColor="#878383"
-        android:textSize="17dp">
-    </TextView>
+        android:textSize="17dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -56,8 +53,8 @@
             android:layout_marginLeft="20dp"
             android:background="@drawable/menu_btn"
             android:textColor="#7A7878"
-            android:textSize="20dp">
-        </EditText>
+            android:textSize="20dp"/>
+
         <EditText
             android:id="@+id/mobile"
             android:layout_width="match_parent"
@@ -71,8 +68,7 @@
             android:layout_marginRight="20dp"
             android:background="@drawable/menu_btn"
             android:textColor="#7A7878"
-            android:textSize="20dp">
-        </EditText>
+            android:textSize="20dp"/>
 
 
     </LinearLayout>
@@ -106,8 +102,7 @@
             android:gravity="center"
             android:text="Get otp"
             android:textColor="@android:color/white"
-            android:textSize="20dp">
-        </Button>
+            android:textSize="20dp"/>
 
         <ProgressBar
             android:layout_width="35dp"
@@ -129,9 +124,7 @@
         android:text="OR "
         android:textStyle="bold"
         android:textColor="@android:color/black"
-        android:textSize="20dp">
-
-    </TextView>
+        android:textSize="20dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -150,7 +143,8 @@
             android:layout_weight="1"
             android:background="@drawable/btn_bg1"
             android:drawableLeft="@drawable/google1"
-            android:textSize="20dp"></com.google.android.gms.common.SignInButton>
+            android:textSize="20dp"/>
+
         <com.facebook.login.widget.LoginButton
             android:id="@+id/fb_login"
             android:layout_width="0dp"
@@ -159,7 +153,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:drawableLeft="@drawable/fb"
-            android:textSize="25dp"></com.facebook.login.widget.LoginButton>
+            android:textSize="25dp"/>
 
     </LinearLayout>
 
